# fourier-series

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cycloid.c  fourier_series.data  fourier_series.js  fourier_series.wasm  index.html  main.c  main.cpp  minshell.html  sketch.cpp
assets/points-svg/: file.txt  fourier.txt  inf.txt  music.txt  peanocurve.txt  plaksha.txt  twitter.txt
include/: constants.h  cycloid.h  drawing.h  fourier.h  readPoints.h  sketch.h
src/: cycloid.c  drawing.c  fourier.c  readPoints.c  sketch.c
test/: drawCycloid.c  drawCycloidSketch.c  drawFourier.c  drawPlot.c  drawSVG.c  drawSVGFourier.c  drawSample.c  drawSketch.c
web/: minshell.html
